use webpack; npm as dependency manager

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,11 @@
   <title>katjes</title>
 
   <link rel="stylesheet" href="assets/layout.css" />
-
-  <script src="app/app.js"></script>
-  <script src="app/lib/processing-1.4.8.js"></script>
-  <script src="app/lib/async.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
   <canvas id="canvas"></canvas>
   <video id="video" muted></video>
+
+  <script src="assets/app.js"></script>
 </body>
 </html>
