inline css; don't use webpack hashes for now

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <title>katjes</title>
-
-  <link rel="stylesheet" href="assets/layout.css" />
 </head>
 <body>
   <canvas id="canvas"></canvas>
   <video id="video" muted></video>
 
-  <script src="assets/app.js"></script>
+  <script src="/assets/app.js"></script>
 </body>
 </html>
